src/stubs/torch_bindings_generated.ml


  let nll_loss2d =
    foreign "atg_nll_loss2d"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> int64_t @-> returning void)

  let nll_loss2d_backward =
    foreign "atg_nll_loss2d_backward"
    (ptr t @-> t @-> t @-> t @-> t @-> int64_t @-> int64_t @-> t @-> returning void)

  let nll_loss2d_backward_out =
    foreign "atg_nll_loss2d_backward_out"
    (ptr t @-> t @-> t @-> t @-> t @-> t @-> int64_t @-> int64_t @-> t @-> returning void)

  let nll_loss2d_forward =
    foreign "atg_nll_loss2d_forward"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> int64_t @-> returning void)

  let nll_loss2d_forward_out =
    foreign "atg_nll_loss2d_forward_out"
    (ptr t @-> t @-> t @-> t @-> t @-> t @-> int64_t @-> int64_t @-> returning void)

  let nll_loss2d_out =
    foreign "atg_nll_loss2d_out"
    (ptr t @-> t @-> t @-> t @-> t @-> int64_t @-> int64_t @-> returning void)

  let nll_loss_backward =
    foreign "atg_nll_loss_backward"
    (ptr t @-> t @-> t @-> t @-> t @-> int64_t @-> int64_t @-> t @-> returning void)

  let nll_loss_backward_out =
    foreign "atg_nll_loss_backward_out"
    (ptr t @-> t @-> t @-> t @-> t @-> t @-> int64_t @-> int64_t @-> t @-> returning void)

  let nll_loss_forward =
    foreign "atg_nll_loss_forward"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> int64_t @-> returning void)

  let nll_loss_forward_out =
    foreign "atg_nll_loss_forward_out"
    (ptr t @-> t @-> t @-> t @-> t @-> t @-> int64_t @-> int64_t @-> returning void)

  let nll_loss_out =
    foreign "atg_nll_loss_out"
    (ptr t @-> t @-> t @-> t @-> t @-> int64_t @-> int64_t @-> returning void)

  let nonzero =
    foreign "atg_nonzero"
    (ptr t @-> t @-> returning void)

  let nonzero_out =
    foreign "atg_nonzero_out"
    (ptr t @-> t @-> t @-> returning void)

  let norm1 =
    foreign "atg_norm1"
    (ptr t @-> t @-> returning void)

  let norm2 =
    foreign "atg_norm2"
    (ptr t @-> t @-> scalar @-> int64_t @-> int @-> returning void)

  let norm_except_dim =
    foreign "atg_norm_except_dim"
    (ptr t @-> t @-> int64_t @-> int64_t @-> returning void)

  let norm_out =
    foreign "atg_norm_out"
    (ptr t @-> t @-> t @-> scalar @-> int64_t @-> int @-> returning void)

  let normal =
    foreign "atg_normal"
    (ptr t @-> t @-> t @-> returning void)

  let normal1 =
    foreign "atg_normal1"
    (ptr t @-> t @-> double @-> returning void)

  let normal2 =
    foreign "atg_normal2"
    (ptr t @-> double @-> t @-> returning void)

  let normal_ =
    foreign "atg_normal_"
    (ptr t @-> t @-> double @-> double @-> returning void)

  let normal_out1 =
    foreign "atg_normal_out1"
    (ptr t @-> t @-> t @-> double @-> returning void)

  let normal_out2 =
    foreign "atg_normal_out2"
    (ptr t @-> t @-> double @-> t @-> returning void)

  let normal_out3 =
    foreign "atg_normal_out3"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let nuclear_norm =
    foreign "atg_nuclear_norm"
    (ptr t @-> t @-> int @-> returning void)

  let nuclear_norm_out =
    foreign "atg_nuclear_norm_out"
    (ptr t @-> t @-> t @-> int @-> returning void)

  let ones =
    foreign "atg_ones"
    (ptr t @-> ptr long @-> int @-> int @-> int @-> returning void)

  let ones_like1 =
    foreign "atg_ones_like1"
    (ptr t @-> t @-> returning void)

  let ones_like2 =
    foreign "atg_ones_like2"
    (ptr t @-> t @-> int @-> int @-> returning void)

  let ones_out =
    foreign "atg_ones_out"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let orgqr =
    foreign "atg_orgqr"
    (ptr t @-> t @-> t @-> returning void)

  let orgqr_out =
    foreign "atg_orgqr_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let ormqr =
    foreign "atg_ormqr"
    (ptr t @-> t @-> t @-> t @-> int @-> int @-> returning void)

  let ormqr_out =
    foreign "atg_ormqr_out"
    (ptr t @-> t @-> t @-> t @-> t @-> int @-> int @-> returning void)

  let pairwise_distance =
    foreign "atg_pairwise_distance"
    (ptr t @-> t @-> t @-> double @-> double @-> int @-> returning void)

  let pdist =
    foreign "atg_pdist"
    (ptr t @-> t @-> double @-> returning void)

  let permute =
    foreign "atg_permute"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let pin_memory =
    foreign "atg_pin_memory"
    (ptr t @-> t @-> returning void)

  let pinverse =
    foreign "atg_pinverse"
    (ptr t @-> t @-> double @-> returning void)

  let pixel_shuffle =
    foreign "atg_pixel_shuffle"
    (ptr t @-> t @-> int64_t @-> returning void)

  let poisson =
    foreign "atg_poisson"
    (ptr t @-> t @-> returning void)

  let polygamma =
    foreign "atg_polygamma"
    (ptr t @-> int64_t @-> t @-> returning void)

  let polygamma_ =
    foreign "atg_polygamma_"
    (ptr t @-> t @-> int64_t @-> returning void)

  let polygamma_out =
    foreign "atg_polygamma_out"
    (ptr t @-> t @-> int64_t @-> t @-> returning void)

  let potrf =
    foreign "atg_potrf"
    (ptr t @-> t @-> int @-> returning void)

  let potrf_out =
    foreign "atg_potrf_out"
    (ptr t @-> t @-> t @-> int @-> returning void)

  let potri =
    foreign "atg_potri"
    (ptr t @-> t @-> int @-> returning void)

  let potri_out =
    foreign "atg_potri_out"
    (ptr t @-> t @-> t @-> int @-> returning void)

  let potrs =
    foreign "atg_potrs"
    (ptr t @-> t @-> t @-> int @-> returning void)

  let potrs_out =
    foreign "atg_potrs_out"
    (ptr t @-> t @-> t @-> t @-> int @-> returning void)

  let pow =
    foreign "atg_pow"
    (ptr t @-> t @-> t @-> returning void)

  let pow1 =
    foreign "atg_pow1"
    (ptr t @-> t @-> scalar @-> returning void)

  let pow_ =
    foreign "atg_pow_"
    (ptr t @-> t @-> t @-> returning void)

  let pow_out1 =
    foreign "atg_pow_out1"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let pow_out2 =
    foreign "atg_pow_out2"
    (ptr t @-> t @-> t @-> scalar @-> returning void)

  let prelu =
    foreign "atg_prelu"
    (ptr t @-> t @-> t @-> returning void)

  let prelu_backward =
    foreign "atg_prelu_backward"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let prod1 =
    foreign "atg_prod1"
    (ptr t @-> t @-> int @-> returning void)

  let prod2 =
    foreign "atg_prod2"
    (ptr t @-> t @-> returning void)

  let prod3 =
    foreign "atg_prod3"
    (ptr t @-> t @-> int64_t @-> int @-> int @-> returning void)

  let prod4 =
    foreign "atg_prod4"
    (ptr t @-> t @-> int64_t @-> int @-> returning void)

  let prod5 =
    foreign "atg_prod5"
    (ptr t @-> t @-> int64_t @-> int @-> returning void)

  let prod_out1 =
    foreign "atg_prod_out1"
    (ptr t @-> t @-> t @-> int64_t @-> int @-> int @-> returning void)

  let prod_out2 =
    foreign "atg_prod_out2"
    (ptr t @-> t @-> t @-> int64_t @-> int @-> returning void)

  let prod_out3 =
    foreign "atg_prod_out3"
    (ptr t @-> t @-> t @-> int64_t @-> int @-> returning void)

  let put_ =
    foreign "atg_put_"
    (ptr t @-> t @-> t @-> t @-> int @-> returning void)

  let qr =
    foreign "atg_qr"
    (ptr t @-> t @-> returning void)

  let qr_out =
    foreign "atg_qr_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let rand =
    foreign "atg_rand"
    (ptr t @-> ptr long @-> int @-> int @-> int @-> returning void)

  let rand_like1 =
    foreign "atg_rand_like1"
    (ptr t @-> t @-> returning void)

  let rand_like2 =
    foreign "atg_rand_like2"
    (ptr t @-> t @-> int @-> int @-> returning void)

  let rand_out =
    foreign "atg_rand_out"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let randint1 =
    foreign "atg_randint1"
    (ptr t @-> int64_t @-> ptr long @-> int @-> int @-> int @-> returning void)

  let randint2 =
    foreign "atg_randint2"
    (ptr t @-> int64_t @-> int64_t @-> ptr long @-> int @-> int @-> int @-> returning void)

  let randint_like1 =
    foreign "atg_randint_like1"
    (ptr t @-> t @-> int64_t @-> returning void)

  let randint_like2 =
    foreign "atg_randint_like2"
    (ptr t @-> t @-> int64_t @-> int64_t @-> returning void)

  let randint_like3 =
    foreign "atg_randint_like3"
    (ptr t @-> t @-> int64_t @-> int @-> int @-> returning void)

  let randint_like4 =
    foreign "atg_randint_like4"
    (ptr t @-> t @-> int64_t @-> int64_t @-> int @-> int @-> returning void)

  let randint_out1 =
    foreign "atg_randint_out1"
    (ptr t @-> t @-> int64_t @-> ptr long @-> int @-> returning void)

  let randint_out2 =
    foreign "atg_randint_out2"
    (ptr t @-> t @-> int64_t @-> int64_t @-> ptr long @-> int @-> returning void)

  let randn =
    foreign "atg_randn"
    (ptr t @-> ptr long @-> int @-> int @-> int @-> returning void)

  let randn_like1 =
    foreign "atg_randn_like1"
    (ptr t @-> t @-> returning void)

  let randn_like2 =
    foreign "atg_randn_like2"
    (ptr t @-> t @-> int @-> int @-> returning void)

  let randn_out =
    foreign "atg_randn_out"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let random_1 =
    foreign "atg_random_1"
    (ptr t @-> t @-> int64_t @-> int64_t @-> returning void)

  let random_2 =
    foreign "atg_random_2"
    (ptr t @-> t @-> int64_t @-> returning void)

  let random_3 =
    foreign "atg_random_3"
    (ptr t @-> t @-> returning void)

  let randperm =
    foreign "atg_randperm"
    (ptr t @-> int64_t @-> int @-> int @-> returning void)

  let randperm_out =
    foreign "atg_randperm_out"
    (ptr t @-> t @-> int64_t @-> returning void)

  let range1 =
    foreign "atg_range1"
    (ptr t @-> scalar @-> scalar @-> int @-> int @-> returning void)

  let range2 =
    foreign "atg_range2"
    (ptr t @-> scalar @-> scalar @-> scalar @-> int @-> int @-> returning void)

  let range_out1 =
    foreign "atg_range_out1"
    (ptr t @-> t @-> scalar @-> scalar @-> returning void)

  let range_out2 =
    foreign "atg_range_out2"
    (ptr t @-> t @-> scalar @-> scalar @-> scalar @-> returning void)

  let reciprocal =
    foreign "atg_reciprocal"
    (ptr t @-> t @-> returning void)

  let reciprocal_ =
    foreign "atg_reciprocal_"
    (ptr t @-> t @-> returning void)

  let reciprocal_out =
    foreign "atg_reciprocal_out"
    (ptr t @-> t @-> t @-> returning void)

  let reflection_pad1d =
    foreign "atg_reflection_pad1d"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let reflection_pad1d_backward =
    foreign "atg_reflection_pad1d_backward"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let reflection_pad1d_backward_out =
    foreign "atg_reflection_pad1d_backward_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let reflection_pad1d_forward =
    foreign "atg_reflection_pad1d_forward"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let reflection_pad1d_forward_out =
    foreign "atg_reflection_pad1d_forward_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let reflection_pad1d_out =
    foreign "atg_reflection_pad1d_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let reflection_pad2d =
    foreign "atg_reflection_pad2d"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let reflection_pad2d_backward =
    foreign "atg_reflection_pad2d_backward"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let reflection_pad2d_backward_out =
    foreign "atg_reflection_pad2d_backward_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let reflection_pad2d_forward =
    foreign "atg_reflection_pad2d_forward"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let reflection_pad2d_forward_out =
    foreign "atg_reflection_pad2d_forward_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let reflection_pad2d_out =
    foreign "atg_reflection_pad2d_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let relu =
    foreign "atg_relu"
    (ptr t @-> t @-> returning void)

  let relu_ =
    foreign "atg_relu_"
    (ptr t @-> t @-> returning void)
